--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "concurrently": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
