--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "jwt-js": "^0.5.0",
+    "moment-timezone": "^0.5.43",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1"
   },
