--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_AUTH_DOMAIN=dev-vxsjc5by5ed7telv.us.auth0.com
 RAECT_APP_AUTH_CLIENTID=9xUGkBn0mLnYbpfUxf2NQ1Y0ZYlzCiwd
+REACT_APP_HOSTNAME=http://localhost:3001
