--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "jwt-js": "^0.5.0",
     "moment-timezone": "^0.5.43",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "paytmchecksum": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
